# ai-round-table

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  pyproject.toml  test_orchestrator.py
.taskmaster/docs/: prd.md
src/ai_roundtable/: __init__.py  cli.py  cli_managers.py  config.py  context.py  logging_config.py  orchestrator.py  session_manager.py  setup.py
